# face_match_app

./: README.md  main.py
CamRecognize/: app.py  camera_manager.py  face_recognition_engine.py  pyproject.toml  replit.md
CamRecognize/CamRecognize/: app.py  camera_manager.py  detection_yolo.py  face_detector_retina.py  face_recognition_engine.py  notification_service.py  pyproject.toml  webrtc_test.html
CamRecognize/CamRecognize/data/: cameras.json  detections.json  reference_faces.json
app/: notifier.py  video_processor.py
