[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "streamlit-webrtc>=0.63.4",
    "streamlit>=1.50.0",
    "aiortc>=1.13.0",
]
